--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "bl": "^0.9.4",
     "body-parser": "~1.12.4",
+    "clone": "^1.0.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
